WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230458
[LFC][IFC] overflow-wrap: anywhere/break-word rules over word-break: keep-all
https://bugs.webkit.org/show_bug.cgi?id=230458
Summary
[LFC][IFC] overflow-wrap: anywhere/break-word rules over word-break: keep-all
alan
Reported
2021-09-19 06:41:45 PDT
"An otherwise unbreakable sequence of characters may be broken at an arbitrary point if there are no otherwise-acceptable break points in the line." <- keep-all makes the content " otherwise unbreakable"
Attachments
Patch
(4.76 KB, patch)
2021-09-19 06:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.99 KB, patch)
2021-09-19 10:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-09-19 06:45:52 PDT
Created
attachment 438593
[details]
Patch
alan
Comment 2
2021-09-19 10:45:13 PDT
Created
attachment 438600
[details]
Patch
EWS
Comment 3
2021-09-19 14:19:05 PDT
Committed
r282738
(
241875@main
): <
https://commits.webkit.org/241875@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438600
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-09-19 14:20:16 PDT
<
rdar://problem/83287686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug